--- a/index.html
+++ b/index.html
@@ -1,170 +1,42 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bubcool1</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
-    <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="https://avatars3.githubusercontent.com/u/32127787?v=4" type="image/png"></head>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Home | Oliver Beardsall</title>
+        <meta name="description" content="Computer Science Student, 3D printing enthusiast and makes some Discord bots. Also helps to run UTCR.LIVE View some of the projects I have worked on here.">
+    <meta name="viewport" content="width=420">
+    <meta name="author" content="Oliver Beardsall">
+    <link rel="shortcut icon" href="assets/me.jpg" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" type="text/css" href="css/base.css"> 
+    <link rel="alternate" title="Oliver Beardsall's Portfolio" href="/updates.xml" type="application/rss+xml">
+        <link rel="image_src" href="img/default.jpg">
+    <meta property="fb:admins" content="222302431">
+    <style>.row, .container { border: 0px !important; }</style>
+  </head>
   <body>
-    <div id="loading">
-      <div id="spinner"></div>
-    </div>
-    <div id="profile">
-      <div id="profile_img" style="background: url(https://avatars3.githubusercontent.com/u/32127787?v=4) center;"></div>
-      <div id="username"><span style="display:block;">Oliver Beardsall</span><a href="https://github.com/Bubcool1">@Bubcool1</a></div>
-      <div id="userbio" style="display: block;">Computer Science Student, 3D printing enthusiast and makes some Discord bots.
-</div>
-      <div id="about">
-                <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
-                <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="bubcool1.github.io">bubcool1.github.io</a></span>
-                <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Reading</span>
-                <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
-                <div class="socials">
-                <span style="display:block;"><a href="https://www.twitter.com/Oli_Beardsall" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
-                <span style="display:none !important;"><a href="https://www.dribbble.com/null" target="_blank" class="socials"><i class="fab fa-dribbble"></i></a></span>
-                <span style="display:block;"><a href="https://www.linkedin.com/in/Oliver Beardsall/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
-                <span style="display:none !important;"><a href="https://www.medium.com/@null/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
-                </div>
-                </div>
-    </div>
-    <div id="display">
-      <div id="work">
-        <h1>Work.</h1>
-        <div class="projects" id="work_section">
-                        <a href="https://github.com/Bubcool1/Poll-Bot" target="_blank">
-                        <section>
-                            <div class="section_title">Poll-Bot</div>
-                            <div class="about_section">
-                            <span style="display:block;">Discord bot for making polls and strawpolls.</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/Bubcool1/Personal-Website" target="_blank">
-                        <section>
-                            <div class="section_title">Personal-Website</div>
-                            <div class="about_section">
-                            <span style="display:block;">My personal website displaying github repos.</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/Bubcool1/OBeardsall.media" target="_blank">
-                        <section>
-                            <div class="section_title">OBeardsall.media</div>
-                            <div class="about_section">
-                            <span style="display:none;">undefined</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; HTML</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/Bubcool1/Discord-Bruh-Bot" target="_blank">
-                        <section>
-                            <div class="section_title">Discord-Bruh-Bot</div>
-                            <div class="about_section">
-                            <span style="display:block;">A bot for my discord server that when someone runs the command !bruh it replies with something special.</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 2</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        </div>
-      </div>
-      <div id="forks" style="display:none;">
-        <h1>Forks.</h1>
-        <div class="projects" id="forks_section"></div>
-      </div>
-      <div id="blog_section">
-        <h1>Blog.</h1>
-        <div id="blogs"></div>
-      </div>
-      <div id="footer">
-        <a href="https://github.com/imfunniee" target="_blank">made on earth by a human</a>
-      </div>
-    </div>
-    <script type="text/javascript">
-      setTimeout(function() {
-        document.getElementById("loading").classList.add("animated");
-        document.getElementById("loading").classList.add("fadeOut");
-        setTimeout(function() {
-          document.getElementById("loading").classList.remove("animated");
-          document.getElementById("loading").classList.remove("fadeOut");
-          document.getElementById("loading").style.display = "none";
-        }, 800);
-      }, 1500);
-      $.getJSON("blog.json", function(blog) {
-        blog = blog || [];
-        if (blog.length == 0) {
-          return (document.getElementById("blog_section").style.display =
-            "none");
-        }
-        for (var i = 0; i < blog.length; i++) {
-          $("#blogs").append(`
-            <a href="./blog/${blog[i].url_title}/" target="_blank">
-                <section>
-                    <img src="./blog/${blog[i].url_title}/${blog[i].top_image}">
-                    <div class="blog_container">
-                        <div class="section_title">${blog[i].title}</div>
-                        <div class="about_section">
-                            ${blog[i].sub_title}
-                        </div>
-                    </div>
-                </section>
-            </a>
-            `);
-        }
-      }).fail(function() {
-        return (document.getElementById("blog_section").style.display = "none");
-      });
-    </script>
-
+    <div class="container">
+            <div class="row h">
+                <div class="col-xs-12">
+                    <h1 id="typed"></h1>
+                    <p>Computer Science Student, 3D printing enthusiast and makes some Discord bots. <br>Also helps to run <a href="https://utcr.live/">UTCR.LIVE</a> View some of the projects I have worked on <a href="projects.html">below</a>.</p>
+                    <div id="social" class="row">
+                        <a href="contact.html"><img src="assets/letter.png" style="width:2.5%;margin-right:2%;margin-top:0.5%"><span class="assist">Contact Oliver</span></i></a>
+                        <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:2.5%;margin-right:2%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
+                        <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:2.5%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
+                     </div>
+                 </div>
+             </div>
+     </div>
+    <script src="js/typeit.min.js"> </script>
     <script>
-      const magicProjectsGrid = new MagicGrid({
-        container: "#work_section",
-        animate: false,
-        gutter: 30, // default gutter size
-        static: true,
-        useMin: false,
-        maxColumns: 2,
-        useTransform: true
-      });
-
-      const magicForksGrid = new MagicGrid({
-        container: "#forks_section",
-        animate: false,
-        gutter: 30, // default gutter size
-        static: true,
-        useMin: false,
-        maxColumns: 2,
-        useTransform: true
-      });
-
-      $("document").ready(() => {
-        magicProjectsGrid.listen();
-        magicForksGrid.listen();
-      });
+        instance = new TypeIt('#typed',{
+            strings: ['Oliver Beardsall'],
+            speed: 150,
+            breakLines: false,
+            autoStart: false,
+            cursor: false
+        })
     </script>
+  </body>
+</html> 
   
-
-</body></html>
