--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=420">
     <meta name="author" content="Oliver Beardsall">
     <link rel="shortcut icon" href="assets/me.jpg" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" type="text/css" href="css/base.css"> 
+    <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="alternate" title="Oliver Beardsall's Portfolio" href="/updates.xml" type="application/rss+xml">
         <link rel="image_src" href="img/default.jpg">
     <meta property="fb:admins" content="222302431">
     <style>.row, .container { border: 0px !important; }</style>
   </head>
-  <body>
+  <body style="background-color:#000000;">
     <div class="container">
             <div class="row h">
                 <div class="col-xs-12">
                     <h1 id="typed"></h1>
                     <p>Computer Science Student, 3D printing enthusiast and makes some Discord bots. <br>Also helps to run <a href="https://utcr.live/">UTCR.LIVE</a> View some of the projects I have worked on <a href="projects.html">below</a>.</p>
                     <div id="social" class="row">
-                        <a href="contact.html"><img src="assets/letter.png" style="width:2.5%;margin-right:2%;margin-top:0.5%"><span class="assist">Contact Oliver</span></i></a>
-                        <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:2.5%;margin-right:2%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
-                        <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:2.5%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
+                        <a href="contact.html"><img src="assets/letter.png" style="width:5%;margin-right:1%;margin-top:0.5%"><span class="assist">Contact Oliver</span></i></a>
+                        <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:5%;margin-left:1%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
+                        <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:5%;margin-left:1%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
                      </div>
                  </div>
              </div>
@@ -38,5 +38,4 @@
         })
     </script>
   </body>
-</html> 
-  
+</html>
