--- a/projects.html
+++ b/projects.html
@@ -12,26 +12,35 @@
         <link rel="image_src" href="img/default.jpg">
     <meta property="fb:admins" content="222302431">
     <style>.row, .container { border: 0px !important; }</style>
+    <script src="https://kit.fontawesome.com/c12a0f35ae.js" crossorigin="anonymous"></script>
   </head>
   <body style="background-color:#000000;">
     <div class="container">
             <div class="row h">
                 <div class="col-xs-12">
-                    <h1 id="typed"></h1>
-                    <p>Computer Science Student, 3D printing enthusiast and makes some Discord bots. <br>Also helps to run <a href="https://utcr.live/">UTCR.LIVE</a> View some of the projects I have worked on <a href="projects.html">below</a>.</p>
-                    <div id="social" class="row">
-                        <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:5%;margin-left:1%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
-                        <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:5%;margin-left:1%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
-                        <a href="contact.html"><img src="assets/letter.png" style="width:5%;margin-right:1%;margin-top:0.5%;margin-left:1%"><span class="assist">Contact Oliver</span></i></a>
-                     </div>
-                 </div>
-             </div>
-     </div>
-
+                  <h1 id="typed"></h1>
+                  <section>
+                    <h2>Discord Bruh Bot</h2>
+                    <p>A bot for discord servers that when someone runs some various commands it replies with something special.<br>Some hidden features also exist requested by my discord server.<br><a href="http://bruh-bot.xyz/">See More</a></p>
+                  </section>
+                  <section>
+                    <h2>Poll Bot</h2>
+                    <p>I got tired with some other poll bots, and wanted to play with some things, so I started building this. Its not really good, but will come with the ability to make stawpolls soon.</p>
+                    <p>More progress coming soon...</p>
+                    <a href="https://github.com/Bubcool1/Poll-Bot">See More</a>
+                  </section>
+                  <h3>More coming soon&trade;</h3>
+                  <br>
+                  <h4>Bring me back</h4>
+                  <a href="index.html"><i class="far fa-hand-point-left fa-lg"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
     <script src="js/typeit.min.js"> </script>
     <script>
         instance = new TypeIt('#typed',{
-            strings: ['Oliver Beardsall'],
+            strings: ['Projects'],
             speed: 150,
             breakLines: false,
             autoStart: false,
