--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Computer Science Student, 3D printing enthusiast and makes some Discord bots. Also helps to run UTCR.LIVE View some of the projects I have worked on here.">
     <meta name="viewport" content="width=420">
     <meta name="author" content="Oliver Beardsall">
-    <link rel="shortcut icon" href="assets/me.jpg" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="assets/me.png" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="alternate" title="Oliver Beardsall's Portfolio" href="/updates.xml" type="application/rss+xml">
         <link rel="image_src" href="img/default.jpg">
