--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Home | Oliver Beardsall</title>
+    <title>Projects | Oliver Beardsall</title>
         <meta name="description" content="Computer Science Student, 3D printing enthusiast and makes some Discord bots. Also helps to run UTCR.LIVE View some of the projects I have worked on here.">
     <meta name="viewport" content="width=420">
     <meta name="author" content="Oliver Beardsall">
