Fixed spacing of images.
It wasnt centered.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <h1 id="typed"></h1>
                     <p>Computer Science Student, 3D printing enthusiast and makes some Discord bots. <br>Also helps to run <a href="https://utcr.live/">UTCR.LIVE</a> View some of the projects I have worked on <a href="projects.html">here</a>.</p>
                     <div id="social" class="row">
-                        <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:5%;margin-left:1%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
-                        <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:5%;margin-left:1%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
+                        <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:5%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
+                        <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:5%;margin-left:1%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
                         <a href="mailto:ojbeardsall@gmail.com"><img src="assets/letter.png" style="width:5%;margin-right:1%;margin-top:0.5%;margin-left:1%"><span class="assist">Contact Oliver</span></i></a>
                      </div>
                  </div>
