--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:5%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
                         <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:5%;margin-left:1%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
                         <a href="mailto:ojbeardsall@gmail.com"><img src="assets/letter.png" style="width:5%;margin-right:1%;margin-top:0.5%;margin-left:1%"><span class="assist">Contact Oliver</span></i></a>
+                        <a href="https://uk.linkedin.com/in/oliver-beardsall"><img src="assets/linkedin.png" style="width:5%;margin-top:0.5%;margin-left:1%"><span class="assist">Oliver on Linkedin</span></i></a>
                      </div>
                  </div>
              </div>
