--- a/projects.html
+++ b/projects.html
@@ -1,51 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Projects | Oliver Beardsall</title>
-        <meta name="description" content="Computer Science Student, 3D printing enthusiast and makes some Discord bots. Also helps to run UTCR.LIVE View some of the projects I have worked on here.">
-    <meta name="viewport" content="width=420">
-    <meta name="author" content="Oliver Beardsall">
-    <link rel="shortcut icon" href="assets/me.jpg" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" type="text/css" href="css/base.css">
-    <link rel="alternate" title="Oliver Beardsall's Portfolio" href="/updates.xml" type="application/rss+xml">
-        <link rel="image_src" href="img/default.jpg">
-    <meta property="fb:admins" content="222302431">
-    <style>.row, .container { border: 0px !important; }</style>
-    <script src="https://kit.fontawesome.com/c12a0f35ae.js" crossorigin="anonymous"></script>
-  </head>
-  <body style="background-color:#000000;">
-    <div class="container">
-            <div class="row h">
-                <div class="col-xs-12">
-                  <h1 id="typed"></h1>
-                  <section>
-                    <h2>Discord Bruh Bot</h2>
-                    <p>A bot for discord servers that when someone runs some various commands it replies with something special.<br>Some hidden features also exist requested by my discord server.<br><a href="http://bruh-bot.xyz/">See More</a></p>
-                  </section>
-                  <section>
-                    <h2>Poll Bot</h2>
-                    <p>I got tired with some other poll bots, and wanted to play with some things, so I started building this. Its not really good, but will come with the ability to make stawpolls soon.</p>
-                    <p>More progress coming soon...</p>
-                    <a href="https://github.com/Bubcool1/Poll-Bot">See More</a>
-                  </section>
-                  <h3>More coming soon&trade;</h3>
-                  <br>
-                  <h4>Bring me back</h4>
-                  <a href="index.html"><i class="far fa-hand-point-left fa-lg"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-    <script src="js/typeit.min.js"> </script>
-    <script>
-        instance = new TypeIt('#typed',{
-            strings: ['Projects'],
-            speed: 150,
-            breakLines: false,
-            autoStart: false,
-            cursor: false
-        })
-    </script>
-  </body>
+  <title>Projects | Oliver Beardsall</title>
+  <meta name="description"
+    content="Computer Science Student, 3D printing enthusiast and makes some Discord bots. Also helps to run UTCR.LIVE View some of the projects I have worked on here.">
+  <meta name="viewport" content="width=420">
+  <meta name="author" content="Oliver Beardsall">
+  <link rel="shortcut icon" href="assets/me.jpg" type="image/vnd.microsoft.icon">
+  <link rel="stylesheet" type="text/css" href="css/base.css">
+  <link rel="alternate" title="Oliver Beardsall's Portfolio" href="/updates.xml" type="application/rss+xml">
+  <link rel="image_src" href="img/default.jpg">
+  <meta property="fb:admins" content="222302431">
+  <style>
+    .row,
+    .container {
+      border: 0px !important;
+    }
+  </style>
+  <script src="https://kit.fontawesome.com/c12a0f35ae.js" crossorigin="anonymous"></script>
+</head>
+
+<body style="background-color:#000000;">
+  <div class="container">
+    <div class="row h">
+      <div class="col-xs-12">
+        <h1 id="typed"></h1>
+        <section>
+          <h2>Discord Bruh Bot</h2>
+          <p>A bot for discord servers that when someone runs some various commands it replies with something
+            special.</p>
+          <p>Hidden features also exist requested by my discord server.</p>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=654325180059090954&permissions=242867498048&redirect_uri=https%3A%2F%2Fbeardsall.xyz%2Fprojects&scope=bot">See More</a>
+        </section>
+        <section>
+          <h2>Poll Bot</h2>
+          <p>I got tired with some other poll bots, and wanted to play with some things, so I started building this. Its
+            not really good, but will come with the ability to make stawpolls soon.</p>
+          <p>More progress coming soon...</p>
+          <a href="https://github.com/Bubcool1/Poll-Bot">See More</a>
+        </section>
+        <h3>More coming soon&trade;</h3>
+        <br>
+        <h4>Bring me back</h4>
+        <a href="index.html"><i class="far fa-hand-point-left fa-lg"></i></a>
+      </div>
+    </div>
+  </div>
+  </div>
+  <script src="js/typeit.min.js"> </script>
+  <script>
+    instance = new TypeIt('#typed', {
+      strings: ['Projects'],
+      speed: 150,
+      breakLines: false,
+      autoStart: false,
+      cursor: false
+    })
+  </script>
+</body>
+
 </html>
