Added CV to website, improved the way the icons are done.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="image_src" href="img/default.jpg">
     <meta property="fb:admins" content="222302431">
     <style>.row, .container { border: 0px !important; }</style>
+    <script src="https://kit.fontawesome.com/c12a0f35ae.js" crossorigin="anonymous"></script>
   </head>
   <body style="background-color:#000000;">
     <div class="container">
@@ -19,10 +20,11 @@
                     <h1 id="typed"></h1>
                     <p>Computer Science Student, 3D printing enthusiast and makes some Discord bots. <br>Also helps to run <a href="https://utcr.live/">UTCR.LIVE</a> View some of the projects I have worked on <a href="projects.html">here</a>.</p>
                     <div id="social" class="row">
-                        <a href="https://github.com/Bubcool1"><img src="assets/github.png" style="width:5%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on GitHub</span></i></a>
-                        <a href="https://twitter.com/Oli_Beardsall"><img src="assets/twitter.png" style="width:5%;margin-left:1%;margin-right:1%;margin-top:0.5%"><span class="assist">Oliver on Twitter</span></i></a>
-                        <a href="mailto:ojbeardsall@gmail.com"><img src="assets/letter.png" style="width:5%;margin-right:1%;margin-top:0.5%;margin-left:1%"><span class="assist">Contact Oliver</span></i></a>
-                        <a href="https://uk.linkedin.com/in/oliver-beardsall"><img src="assets/linkedin.png" style="width:5%;margin-top:0.5%;margin-left:1%"><span class="assist">Oliver on Linkedin</span></i></a>
+                        <a href="https://github.com/Bubcool1" class="iconLink"><i class="fab fa-github fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver on GitHub</span></i></a>
+                        <a href="https://twitter.com/Oli_Beardsall" class="iconLink"><i class="fab fa-twitter fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver on Twitter</span></i></a>
+                        <a href="mailto:ojbeardsall@gmail.com" class="iconLink"><i class="fas fa-envelope fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Contact Oliver</span></i></a>
+                        <a href="https://uk.linkedin.com/in/oliver-beardsall" class="iconLink"><i class="fab fa-linkedin fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver on Linkedin</span></i></a>
+                        <a href="assets/CV%20-%20Oliver%20Beardsall.pdf" class="iconLink"><i class="fas fa-file-alt fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver on Linkedin</span></i></a>
                      </div>
                  </div>
              </div>
