Improved the CV Link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="https://twitter.com/Oli_Beardsall" class="iconLink"><i class="fab fa-twitter fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver on Twitter</span></i></a>
                         <a href="mailto:ojbeardsall@gmail.com" class="iconLink"><i class="fas fa-envelope fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Contact Oliver</span></i></a>
                         <a href="https://uk.linkedin.com/in/oliver-beardsall" class="iconLink"><i class="fab fa-linkedin fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver on Linkedin</span></i></a>
-                        <a href="assets/CV%20-%20Oliver%20Beardsall.pdf" class="iconLink"><i class="fas fa-file-alt fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver on Linkedin</span></i></a>
+                        <a href="assets/CV.pdf" class="iconLink"><i class="fas fa-file-alt fa-2x" style="margin-right:1%;margin-top:0.5%;margin-left:1%"></i><span class="assist">Oliver's CV</span></i></a>
                      </div>
                  </div>
              </div>
